infra/k8s/driver-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: driver-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: driver
  template:
    metadata:
      labels:
        app: driver
    spec:
      containers:
        - name: driver
          image: jordon5611/driver
---
apiVersion: v1
kind: Service
metadata:
  name: driver-srv
spec:
  selector:
    app: driver
  ports:
    - name: driver
      protocol: TCP
      port: 2000
      targetPort: 2000
