infra/k8s/rides-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rides-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rides
  template:
    metadata:
      labels:
        app: rides
    spec:
      containers:
        - name: rides
          image: jordon5611/rides
---
apiVersion: v1
kind: Service
metadata:
  name: rides-srv
spec:
  selector:
    app: rides
  ports:
    - name: rides
      protocol: TCP
      port: 2000
      targetPort: 2000
