infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: chating.dev
      http:
        paths:
          - path: /auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 2000
          - path: /api/driver/?(.*)
            pathType: Prefix
            backend:
              service:
                name: driver-srv
                port:
                  number: 2000
          - path: /api/rides/?(.*)
            pathType: Prefix
            backend:
              service:
                name: rides-srv
                port:
                  number: 2000
          - path: /api/payment/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-srv
                port:
                  number: 2000
          - path: /api/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 2000
